<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.contactlist.ContactList">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewContactList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backOfCard"
        android:layout_width="360dp"
        android:layout_height="640dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/reminder_contact_background"
        android:backgroundTint="@color/card_background"
        android:elevation="3dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">


        <TextView
            android:id="@+id/reminderForContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/reminder_for_contacts"
            android:textColor="@color/reminder_tint"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cardFrameBack"
            app:layout_constraintStart_toStartOf="@+id/cardFrameBack"
            app:layout_constraintTop_toBottomOf="@+id/saveBackDecor"
            app:layout_constraintWidth_percent="0.7" />

        <ImageView
            android:id="@+id/cardFrameBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/reminder_contact_frame" />

        <ImageView
            android:id="@+id/saveBackDecor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/reminder_edit_icon_back" />


        <ImageView
            android:id="@+id/rightHideFrameBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/blank_background"
            app:layout_constraintBottom_toBottomOf="@+id/cardFrameBack"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/leftHideFrameBack"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:background="@drawable/blank_background"
            app:layout_constraintBottom_toTopOf="@+id/bottomHideFrameBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rightHideFrameBack"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/bottomHideFrameBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@drawable/blank_background_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/bottomIdentifyTextBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/creator_text"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/bottomHideFrameBack"
            app:layout_constraintEnd_toEndOf="@+id/bottomHideFrameBack"
            app:layout_constraintStart_toStartOf="@+id/bottomHideFrameBack"
            app:layout_constraintTop_toTopOf="@+id/bottomHideFrameBack"
            app:layout_constraintVertical_bias="0.565" />

        <View
            android:id="@+id/saveIconBack"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/create_new_reminder_icon"
            app:layout_constraintBottom_toBottomOf="@+id/saveBackDecor"
            app:layout_constraintEnd_toEndOf="@+id/saveBackDecor"
            app:layout_constraintStart_toStartOf="@+id/saveBackDecor"
            app:layout_constraintTop_toTopOf="@+id/saveBackDecor" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/poppins"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/datePicker"
            app:layout_constraintStart_toStartOf="@+id/cardFrameBack"
            app:layout_constraintTop_toTopOf="@+id/datePicker" />

        <TextView
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/editor_text_background"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:hint="03/12/2022"
            android:paddingStart="10dp"
            android:paddingTop="6dp"
            android:paddingEnd="10dp"
            android:paddingBottom="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/cardFrameBack"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/poppins"
            android:text="@string/interval"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/intervalEditText"
            app:layout_constraintStart_toStartOf="@+id/cardFrameBack"
            app:layout_constraintTop_toTopOf="@+id/intervalEditText" />

        <EditText
            android:id="@+id/intervalEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/editor_text_background"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:hint="@string/example"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingTop="6dp"
            android:paddingEnd="10dp"
            android:paddingBottom="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/cardFrameBack"
            app:layout_constraintTop_toBottomOf="@+id/datePicker" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/clock_settings"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView15"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/intervalEditText" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/begining_hour"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/beginningTimePicker"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/beginningTimePicker" />

        <TextView
            android:id="@+id/beginningTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/editor_text_background"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:hint="12:15"
            android:paddingStart="10dp"
            android:paddingTop="6dp"
            android:paddingEnd="10dp"
            android:paddingBottom="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/intervalEditText"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/end_hour"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/endTimePicker"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/endTimePicker" />

        <TextView
            android:id="@+id/endTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/editor_text_background"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:hint="13:30"
            android:paddingStart="10dp"
            android:paddingTop="6dp"
            android:paddingEnd="10dp"
            android:paddingBottom="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/beginningTimePicker"
            app:layout_constraintTop_toBottomOf="@+id/beginningTimePicker" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/date_setting"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/reminderForContact"
            app:layout_constraintStart_toStartOf="@+id/reminderForContact"
            app:layout_constraintTop_toBottomOf="@+id/reminderForContact" />

        <Button
            android:id="@+id/cancelReminderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/createReminderButton"
            app:layout_constraintStart_toEndOf="@+id/leftHideFrameBack"
            app:layout_constraintTop_toTopOf="@+id/createReminderButton" />

        <Button
            android:id="@+id/createReminderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/create"
            app:layout_constraintEnd_toStartOf="@+id/rightHideFrameBack"
            app:layout_constraintTop_toBottomOf="@+id/endTimePicker" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>